--- a/style/base.css
+++ b/style/base.css
@@ -42,7 +42,7 @@ button {
 @media (min-width: 1228px) {
     .barra {
         height: 100px;
-        background-color: aqua;
+        background-color: rgb(0, 0, 0);
     }
     .tablet {
         display: none;
@@ -50,6 +50,57 @@ button {
     .desktop {
         display: inline;
         font-size: 90px;
-        color: bisque;
+        color: rgb(255, 255, 255);
     }
+}
+
+
+
+
+.btn {
+    background-color: #9aff78;
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+#a1{
+    display: none;
+}
+#a2{
+    display: none;
+}
+#a3{
+    display: none;
+}
+#a4{
+    display: none;
+}
+#a5{
+    display: none;
+}
+
+.aba1{
+    background-color: #7cea5b;
+    width: 100%;
+    height: 400px;
+}
+.aba2{
+    background-color: #5ed43f;
+    width: 100%;
+    height: 400px;
+}
+.aba3{
+    background-color: #40bf22;
+    width: 100%;
+    height: 400px;
+}
+.aba4{
+    background-color: #22a905;
+    width: 100%;
+    height: 400px;
+}
+.aba5{
+    background-color: green;
+    width: 100%;
+    height: 400px;
 }
